k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vietsign-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vietsign-frontend
  template:
    metadata:
      labels:
        app: vietsign-frontend
    spec:
      containers:
        - name: frontend
          image: jin312/vietsign-fe:v1.0.2
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "1Gi"
          volumeMounts:
            - name: config-vol
              mountPath: /app/public/config.js
              subPath: config.js
      volumes:
        - name: config-vol
          configMap:
            name: frontend-config
---
apiVersion: v1
kind: Service
metadata:
  name: vietsign-frontend-service
spec:
  selector:
    app: vietsign-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
