k8s/mysql-db.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql
  labels:
    app: vietsign
spec:
  ports:
    - port: 3306
  selector:
    app: mysql
  clusterIP: None # Headless service

---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mysql
spec:
  selector:
    matchLabels:
      app: mysql
  serviceName: "mysql"
  replicas: 1
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
        - name: mysql
          image: mysql:8.0
          ports:
            - containerPort: 3306
              name: mysql
          resources:
            requests:
              memory: "512Mi"
              cpu: "250m"
          volumeMounts:
            - name: mysql-data
              mountPath: /var/lib/mysql
  volumeClaimTemplates:
    - metadata:
        name: mysql-data
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: "local-path" # Khớp với SC bạn vừa cài
        resources:
          requests:
            storage: 10Gi
