k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vietsign-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - http:
        paths:
          - path: /api(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: vietsign-backend-service
                port:
                  number: 5000
          - path: /minio-api(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: minio
                port:
                  number: 9000
          - path: /minio-console(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: minio
                port:
                  number: 9001
          - path: /()(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: vietsign-frontend-service
                port:
                  number: 80
